@startuml
skinparam nodesep 10
hide circle
hide empty members
abstract "Template" [[{A schema that can be applied to a story}]] {
    {field} id : ncname  
    {field} prompt : string  
    {field} schema_def : JSONSchema  
}
class "Narrative" [[{A narrative description of either a concrete or abstracted Case or ProgramTemplate. There can be many narratives.}]] {
    {field} id : ncname  
    {field} status : Status  
    {field} when : datetime  
    {field} title : string  
    {field} content : string  
}
class "SituationSchema" [[{A schema that describes questions applicable to a certain type of situation}]] {
    {field} id(i) : ncname  
    {field} prompt(i) : string  
    {field} schema_def(i) : JSONSchema  
}
class "ReportTemplate" [[{A template that describes a category of outcome we expect at the end of a ProcessTemplate, and especially the criteria we intend to measure at the end of the process.}]] {
    {field} id(i) : ncname  
    {field} prompt(i) : string  
    {field} schema_def(i) : JSONSchema  
}
"Template" --> "1" "Narrative" : "narrative"
"Template" ^-- "SituationSchema"
"Template" ^-- "ReportTemplate"
class "Skill" [[{A requisite skill to fulfill a role in a process}]] {
    {field} id : ncname  
    {field} name : string  
    {field} description : string  
}
class "Proficiency" [[{A level of proficiency in a skill}]] {
    {field} level : float  
}
"Skill" --> "0..*" "Skill" : "requisites"
"Proficiency" --> "1" "Skill" : "skill"
class "SituationCondition" [[{Given that a situation fits a schema, what range of answers make a given rule applicable?}]] {
    {field} id : ncname  
    {field} condition : JSON  
}
"SituationCondition" --> "1" "SituationSchema" : "situation_schema"
class "Rule" [[{The template that describes an entry in our best practice workbook, consisting of an (abstracted) situation we try to solve, and the process we intend to use to solve it.}]] {
    {field} id : ncname  
    {field} name : string  
    {field} description : string  
    {field} prompt : string  
}
"Rule" --> "1" "SituationCondition" : "situation_condition"
class "Rulebook" [[{A set of rules}]] {
    {field} status : Status  
}
class "Organization" [[{An organization where persons work}]] {
    {field} id : ncname  
    {field} name : string  
    {field} mission_statetement : string  
}
"Rulebook" --> "0..*" "Rule" : "rules"
"Organization" *--> "1" "Rulebook" : "considered_rules"
"Organization" *--> "1" "Rulebook" : "rulebook"
class "ProgramTemplate" [[{The actual process we will use to solve a given problem.}]] {
    {field} id : ncname  
    {field} name : string  
}
class "Case" [[{The narrative description of an individual work unit we have solved or intend to solve.}]] {
    {field} id : ncname  
    {field} name : string  
    {field} idealized : boolean  
    {field} outcome_analysis : JSON  
}
"Rule" --> "0..1" "Rule" : "superseded_by"
"Rule" --> "0..1" "ProgramTemplate" : "process"
"Case" --> "0..*" "Rule" : "considered_templates"
"Case" --> "0..1" "Rule" : "selected_template"
class "Role" [[{A process involves certain actors playing certain roles in the process. This describes the roles.}]] {
    {field} id : ncname  
    {field} name : string  
    {field} description : string  
}
"Role" *--> "0..*" "Proficiency" : "skills"
"ProgramTemplate" --> "0..*" "Role" : "roles"
class "Objective" [[{None}]] {
    {field} id : ncname  
    {field} standard_of_evalution : string  
    {field} threshold : float  
}
class "Report" [[{A report contains a narrative and evaluations}]] {
    {field} id : ncname  
}
"ReportTemplate" --> "0..*" "Objective" : "objectives"
"ProgramTemplate" --> "1" "ReportTemplate" : "outcome"
"Report" --> "0..1" "ReportTemplate" : "based_on"
class "Evaluation" [[{The evaluation of an outcome with respect to one of the Program's Criteria}]] {
    {field} value : float  
    {field} achieved : boolean  
}
"Report" *--> "0..*" "Evaluation" : "evaluations"
"Report" --> "1" "Narrative" : "narrative"
"Case" --> "0..*" "Report" : "outcome"
"ProgramTemplate" --> "0..1" "ProgramTemplate" : "follows_process"
"ProgramTemplate" --> "0..*" "ProgramTemplate" : "subprocesses"
"ProgramTemplate" --> "1" "Narrative" : "narrative"
"Organization" --> "0..*" "ProgramTemplate" : "core_programs"
class "Person" [[{A person involved in a process}]] {
    {field} id : ncname  
    {field} name : string  
    {field} email : string  
}
"Person" *--> "0..*" "Proficiency" : "skills"
"Narrative" --> "0..*" "Person" : "authors"
"Organization" --> "0..*" "Person" : "personnel"
"Organization" --> "0..*" "Case" : "casebook"
"Organization" --> "0..*" "Organization" : "subunits"
"Organization" --> "0..1" "Narrative" : "base_narrative"
class "Criterion" [[{A description of a criterion by which outcomes will be evaluated. E.g. A KPI is a Criterion.}]] {
    {field} id : ncname  
    {field} name : string  
    {field} description : string  
    {field} unit : string  
}
"Objective" --> "1" "Criterion" : "addresses"
"Evaluation" --> "1" "Objective" : "objective"
"Case" --> "1..*" "Narrative" : "brief"
"Case" --> "0..*" "Narrative" : "narratives"
@enduml
